d2c-org/d2c-core/base-configurations/main/default/objects/Account/fields/ContractNumberFormatted__c.field-meta.xml
<CustomField>
    <fullName>ContractNumberFormatted__c</fullName>
    <businessOwnerGroup>ITDataOwner</businessOwnerGroup>
    <description>Formatted Contract Number used for display, from Contract Number Unformatted.</description>
    <formula>LEFT(ContractNumberUnformatted__c, 3) + &quot;-&quot; + MID(ContractNumberUnformatted__c,4,4) + &quot;-&quot; + RIGHT(ContractNumberUnformatted__c,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>