d2c-org/d2c-core/base-configurations/main/default/objects/Account/fields/ContractNumberUnformatted__c.field-meta.xml
<CustomField>
    <fullName>ContractNumberUnformatted__c</fullName>
    <businessOwnerGroup>ITDataOwner</businessOwnerGroup>
    <description>Sourced from CUIC. Contract number of account.</description>
    <externalId>true</externalId>
    <label>Contract Number Unformatted</label>
    <length>8</length>
    <type>Text</type>
</CustomField>