d2c-org/d2c-core/base-configurations/main/default/objects/Account/fields/MarketingName__c.field-meta.xml
<CustomField>
    <fullName>MarketingName__c</fullName>
    <businessOwnerGroup>ITDataOwner</businessOwnerGroup>
    <description>Sourced from CUIC. </description>
    <label>Marketing Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>