d2c-org/d2c-core/base-configurations/main/default/objects/Account/fields/SpecialInstructions__c.field-meta.xml
<CustomField>
    <fullName>SpecialInstructions__c</fullName>
    <businessOwnerGroup>ITDataOwner</businessOwnerGroup>
    <description>?? Add Description</description>
    <label>Special Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>