d2c-org/d2c-core/base-configurations/main/default/objects/Account/recordTypes/Affiliation.recordType-meta.xml
<RecordType>
    <fullName>Affiliation</fullName>
    <active>true</active>
    <description>A credit union or other affiliation with the consumer.</description>
    <label>Affiliation</label>
</RecordType>