d2c-org/d2c-core/base-configurations/main/default/objects/Account/listViews/AllCreditUnionAccounts.listView-meta.xml
<ListView>
    <fullName>AllCreditUnionAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ContractNumberFormatted__c</columns>
    <columns>DomicileState__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Credit Union</value>
    </filters>
    <label>All Credit Union Accounts</label>
    <sharedTo>
        <role>D2CAdmin</role>
    </sharedTo>
</ListView>